# inbox-manager-agent

./: .gitignore  .replit  app.py  custom_tools.py  email_cleaning.py  email_pairs.csv  extract_faq.py  faq.csv  mbox_to_csv.py  past_email_mbox.csv  pyproject.toml  requirements.txt
